--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -5,7 +5,7 @@ on:
       - master
 jobs:
   build:
-    runs-on: debian:buster-20191118-slim
+    runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@master
     - name: Publish to Registry
